fix tag gap in UI resources

--- a/stalker_ui/src/app/modules/domains/view-domain/view-domain.component.scss
+++ b/stalker_ui/src/app/modules/domains/view-domain/view-domain.component.scss
@@ -72,7 +72,3 @@ panel-section-title {
     }
   }
 }
-
-app-pill-tag {
-  margin-right: 5px;
-}
