--- a/stalker_ui/src/app/modules/ports/list-ports/list-ports.component.scss
+++ b/stalker_ui/src/app/modules/ports/list-ports/list-ports.component.scss
@@ -2,10 +2,6 @@ mat-card {
   overflow: hidden;
 }
 
-app-pill-tag {
-  margin-right: 10px;
-}
-
 mat-dialog-content {
   display: flex;
   flex-direction: column;
